force-app/main/default/objects/Opportunity/fields/Account_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Account_Days_Past_Due__c</fullName>
    <description>Used in the partner portal as an alternative to sharing accounts with partners.</description>
    <formula>Account.Days_Past_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>