force-app/main/default/objects/Opportunity/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used for internal Perch Sales tracking efforts.</description>
    <inlineHelpText>This is used for internal Perch Sales tracking efforts.</inlineHelpText>
    <label>Account Owner at Origination</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>