force-app/main/default/objects/Opportunity/fields/ACH_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ACH_Account_Number__c</fullName>
    <label>ACH Account Number</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>