force-app/main/default/objects/Opportunity/fields/ACH_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>ACH_Account_Type__c</fullName>
    <label>ACH Account Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>