force-app/main/default/objects/Opportunity/fields/ACH_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>ACH_Bank_Name__c</fullName>
    <label>ACH Bank Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>