force-app/main/default/objects/Opportunity/fields/ACH_Bank_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>ACH_Bank_Routing_Number__c</fullName>
    <label>ACH Bank Routing Number</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>