force-app/main/default/objects/Opportunity/fields/ACH_Name_on_Account__c.field-meta.xml
<CustomField>
    <fullName>ACH_Name_on_Account__c</fullName>
    <label>ACH Name on Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>