force-app/main/default/objects/Opportunity/fields/Acquired_By_Client_Closed_By_BlueWave__c.field-meta.xml
<CustomField>
    <fullName>Acquired_By_Client_Closed_By_BlueWave__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the lead was acquired by Client but closed by Perch. Used for Client Invoicing</inlineHelpText>
    <label>Acquired By Client, Closed By Perch</label>
    <type>Checkbox</type>
</CustomField>