force-app/main/default/objects/Opportunity/fields/Additional_Components__c.field-meta.xml
<CustomField>
    <fullName>Additional_Components__c</fullName>
    <label>Inverter Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>