force-app/main/default/objects/Opportunity/fields/Anchor_Stage__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Stage__c</fullName>
    <description>Stages for BD Offtake Opportunities</description>
    <inlineHelpText>Stages for BD Offtake Opportunities</inlineHelpText>
    <label>Anchor Stage</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>New-Cold</fullName>
                
                
                    <label>New-Cold</label>
                
                </value>
            
                <value>
                
                    <fullName>New-Warm</fullName>
                
                
                    <label>New-Warm</label>
                
                </value>
            
                <value>
                
                    <fullName>Proposal-Cold</fullName>
                
                
                    <label>Proposal-Cold</label>
                
                </value>
            
                <value>
                
                    <fullName>Proposal-Internal/Friendly Intro</fullName>
                
                
                    <label>Proposal-Internal/Friendly Intro</label>
                
                </value>
            
                <value>
                
                    <fullName>Proposal-Scout/Partner Intro</fullName>
                
                
                    <label>Proposal-Scout/Partner Intro</label>
                
                </value>
            
                <value>
                
                    <fullName>Customer Support/LOI/MOU</fullName>
                
                
                    <label>Customer Support/LOI/MOU</label>
                
                </value>
            
                <value>
                
                    <fullName>Board Approval</fullName>
                
                
                    <label>Board Approval</label>
                
                </value>
            
                <value>
                
                    <fullName>NMCPA Signed</fullName>
                
                
                    <label>NMCPA Signed</label>
                
                </value>
            
                <value>
                
                    <fullName>Complete</fullName>
                
                
                    <label>Complete</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>