force-app/main/default/objects/Opportunity/fields/Annual_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Annual_Consumption__c</fullName>
    <formula>IF( Annual_Electricity_Cost__c == null,

null, Annual_Electricity_Cost__c/NMC_Value__c)</formula>
    <label>Credits Required to Meet Load</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>