force-app/main/default/objects/Opportunity/fields/Annual_Consumption_kWh__c.field-meta.xml
<CustomField>
    <fullName>Annual_Consumption_kWh__c</fullName>
    <label>Annual Consumption (kWh)</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>