force-app/main/default/objects/Opportunity/fields/Annual_Electricity_Cost__c.field-meta.xml
<CustomField>
    <fullName>Annual_Electricity_Cost__c</fullName>
    <inlineHelpText>Enter Annual Electricity Cost of the total kWh being sized. If Residential Solar is already installed please enter cost of excess uncovered kWh. If not, please enter total annual cost of electricity.</inlineHelpText>
    <label>Annual Electricity Cost ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>