force-app/main/default/objects/Opportunity/fields/Annual_Electricity_Cost_Method__c.field-meta.xml
<CustomField>
    <fullName>Annual_Electricity_Cost_Method__c</fullName>
    <label>Subscription Method</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Enter the data manually</fullName>
                
                
                    <label>Enter the data manually</label>
                
                </value>
            
                <value>
                
                    <fullName>Utility Account Log Calculator (Default)</fullName>
                
                
                    <label>Utility Account Log Calculator (Default)</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>