force-app/main/default/objects/Opportunity/fields/Annual_Production__c.field-meta.xml
<CustomField>
    <fullName>Annual_Production__c</fullName>
    <label>Annual Production</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>