force-app/main/default/objects/Opportunity/fields/Anticipated_First_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_First_Billing_Date__c</fullName>
    <description>Anticipated First Billing Date</description>
    <label>Anticipated COD Date</label>
    <type>Date</type>
</CustomField>