force-app/main/default/objects/Opportunity/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Maps created date from the lead.</description>
    <inlineHelpText>Maps created date from the lead.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>