force-app/main/default/objects/Opportunity/fields/Application_Source_Phase_2__c.field-meta.xml
<CustomField>
    <fullName>Application_Source_Phase_2__c</fullName>
    <description>Formula field form lead. For Avidia List view.</description>
    <formula>Lead__r.Application_Source_Phase_2__c</formula>
    <inlineHelpText>Formula field form lead. For Avidia List view.</inlineHelpText>
    <label>Application Source (Phase 2)</label>
    <type>Text</type>
</CustomField>