force-app/main/default/objects/Opportunity/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <formula>TEXT(Lead__r.Partner_Application_Status__c)</formula>
    <label>Application Status</label>
    <type>Text</type>
</CustomField>