force-app/main/default/objects/Opportunity/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>