force-app/main/default/objects/Opportunity/fields/Assessors_Parcel_Number__c.field-meta.xml
<CustomField>
    <fullName>Assessors_Parcel_Number__c</fullName>
    <label>Assessor&apos;s Parcel Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>