force-app/main/default/objects/Opportunity/fields/Assigned_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Client__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Assignment_Agreement__c)),
AND(
NOT(ISPICKVAL(Assignment_Agreement__r.Status,&quot;Draft&quot;)),
NOT(ISPICKVAL(Assignment_Agreement__r.Status,&quot;Rejected&quot;))
)
),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if this opportunity is linked to a client assignment agreement, unless the assignment agreement has Status = Draft or Rejected</inlineHelpText>
    <label>Assigned to Client</label>
    <type>Checkbox</type>
</CustomField>