force-app/main/default/objects/Opportunity/fields/Available_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Available_kW_DC__c</fullName>
    <formula>Maximum_kW_Subscription__c - Total_Subscribed_kW_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining kW available for Opportunity (Maximum kW - Total Subscribed)</inlineHelpText>
    <label>Available kW DC</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>