force-app/main/default/objects/Opportunity/fields/BCS_Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>BCS_Commission_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCS Commission Paid (P1)</label>
    <type>Checkbox</type>
</CustomField>