force-app/main/default/objects/Opportunity/fields/Billing_City_Upper_Case__c.field-meta.xml
<CustomField>
    <fullName>Billing_City_Upper_Case__c</fullName>
    <description>This field is used for the GeoJSON map in Wave Analytics. The JSON file compares customer records to each town on the map. Each town&apos;s identifier is case sensitive. Therefore, all records need an all uppercase city in order for the date to be illustrated correctly - Cole Swain</description>
    <formula>UPPER(City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used for the GeoJSON map in Wave Analytics. The JSON file compares customer records to each town on the map. Each town&apos;s identifier is case sensitive. Alll records need an all uppercase city in order for the date to be illustrated correctly.</inlineHelpText>
    <label>Billing City (Upper Case)</label>
    <type>Text</type>
</CustomField>