force-app/main/default/objects/Opportunity/fields/Board_Meeting_Dates__c.field-meta.xml
<CustomField>
    <fullName>Board_Meeting_Dates__c</fullName>
    <description>For Large Offtake, field to track board meeting dates</description>
    <inlineHelpText>For Large Offtake, field to track board meeting dates</inlineHelpText>
    <label>Board Meeting Dates</label>
    <length>35</length>
    <type>Text</type>
</CustomField>