force-app/main/default/objects/Opportunity/fields/BS_Sales_ID__c.field-meta.xml
<CustomField>
    <fullName>BS_Sales_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>BSST__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>