force-app/main/default/objects/Opportunity/fields/Cancellation_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Request_Date__c</fullName>
    <formula>Account.Cancellation_Request_Date__c</formula>
    <inlineHelpText>This is the Cancellation Request Date for the Account.</inlineHelpText>
    <label>Cancellation Request Date</label>
    <type>Date</type>
</CustomField>