force-app/main/default/objects/Opportunity/fields/CC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Account_Number__c</fullName>
    <label>CC Account Number</label>
    <length>65</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>