force-app/main/default/objects/Opportunity/fields/CC_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Card_Type__c</fullName>
    <label>CC Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>