force-app/main/default/objects/Opportunity/fields/CC_CardHolder_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_CardHolder_Name__c</fullName>
    <label>CC CardHolder Name</label>
    <length>65</length>
    <type>Text</type>
</CustomField>