force-app/main/default/objects/Opportunity/fields/CC_CVV__c.field-meta.xml
<CustomField>
    <fullName>CC_CVV__c</fullName>
    <label>CC CVV</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>