force-app/main/default/objects/Opportunity/fields/CC_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Expiration_Date__c</fullName>
    <label>CC Expiration Date</label>
    <length>15</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>