force-app/main/default/objects/Opportunity/fields/CC_Expiration_Month__c.field-meta.xml
<CustomField>
    <fullName>CC_Expiration_Month__c</fullName>
    <label>CC Expiration Month</label>
    <length>2</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>