force-app/main/default/objects/Opportunity/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>