force-app/main/default/objects/Opportunity/fields/Clone_Status__c.field-meta.xml
<CustomField>
    <fullName>Clone_Status__c</fullName>
    <formula>IF(  CS_Capacity_Allocated__c &gt;= Shared_Solar_System__r.Maximum_Subscription_Capacity_kWDC__c , &quot;Multiple Records Needed - Please Clone&quot;, &quot;No Clones Needed&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clone Status</label>
    <type>Text</type>
</CustomField>