force-app/main/default/objects/Opportunity/fields/Closing_Month__c.field-meta.xml
<CustomField>
    <fullName>Closing_Month__c</fullName>
    <formula>IF( Month(CloseDate) = 1, &apos;January&apos;,
IF( Month(CloseDate) = 2, &apos;February&apos;,
IF( Month(CloseDate) = 3, &apos;March&apos;,
IF( Month(CloseDate) = 4, &apos;April&apos;,
IF( Month(CloseDate) = 5, &apos;May&apos;,
IF( Month(CloseDate) = 6, &apos;June&apos;,
IF( Month(CloseDate) = 7, &apos;July&apos;,
IF( Month(CloseDate) = 8, &apos;August&apos;,
IF( Month(CloseDate) = 9, &apos;September&apos;,
IF( Month(CloseDate) = 10, &apos;October&apos;,
IF( Month(CloseDate) = 11, &apos;November&apos;,
IF( Month(CloseDate) = 12, &apos;December&apos;, null))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Month</label>
    <type>Text</type>
</CustomField>