force-app/main/default/objects/Opportunity/fields/Commission_Structure__c.field-meta.xml
<CustomField>
    <fullName>Commission_Structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commission Structure</label>
    <referenceTo>Commission_Structure__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>