force-app/main/default/objects/Opportunity/fields/Communication_Reached__c.field-meta.xml
<CustomField>
    <fullName>Communication_Reached__c</fullName>
    <label>Communication Reached</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conversation</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>