force-app/main/default/objects/Opportunity/fields/Community_Solar_Apt_Suite__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar_Apt_Suite__c</fullName>
    <label>Apt/Suite</label>
    <length>5</length>
    <type>Text</type>
</CustomField>