force-app/main/default/objects/Opportunity/fields/Community_Solar_Discount__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar_Discount__c</fullName>
    <defaultValue>10</defaultValue>
    <description>This is the discount given to community solar subscribers.  Default value is 10%.</description>
    <inlineHelpText>This is the discount given to community solar subscribers.  Default value is 10%.</inlineHelpText>
    <label>Community Solar Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>