force-app/main/default/objects/Opportunity/fields/Community_Solar_State__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar_State__c</fullName>
    <label>State</label>
    <length>5</length>
    <type>Text</type>
</CustomField>