force-app/main/default/objects/Opportunity/fields/Community_Solar_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Community_Solar_Street_Address__c</fullName>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>