force-app/main/default/objects/Opportunity/fields/Company_Tyope__c.field-meta.xml
<CustomField>
    <fullName>Company_Tyope__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Installer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>