force-app/main/default/objects/Opportunity/fields/Concatenated_Install_Address__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Install_Address__c</fullName>
    <description>Used in RL docusign packages</description>
    <formula>BLANKVALUE(Community_Solar_Street_Address__c, Street_Address__c) + &quot;, &quot; + BLANKVALUE(Community_Solar_City__c, City__c) + &quot;, &quot; + BLANKVALUE(Community_Solar_State__c, BLANKVALUE(State_of_Issuance__c,State__c)) + &quot; &quot; + BLANKVALUE(Parcel_ZIp__c,Zip_Code__c)</formula>
    <inlineHelpText>Used in RL docusign packages</inlineHelpText>
    <label>Concatenated Install Address</label>
    <type>Text</type>
</CustomField>