force-app/main/default/objects/Opportunity/fields/Conga_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Conga_Contract_Id__c</fullName>
    <description>Pulls in the Conga template IDs used to generate the countersigned version of SSF contracts. Needed because lookupfields can&apos;t be referenced in buttons.</description>
    <formula>Product__r.Opp_Conga_Template_Id_s__c</formula>
    <inlineHelpText>Pulls in the Conga template IDs used to generate the countersigned version of SSF contracts. Needed because lookupfields can&apos;t be referenced in buttons.</inlineHelpText>
    <label>Conga Contract Id</label>
    <type>Text</type>
</CustomField>