force-app/main/default/objects/Opportunity/fields/Conga_Letter_Send__c.field-meta.xml
<CustomField>
    <fullName>Conga_Letter_Send__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id + 
&quot;&amp;templateid=a2F0a000001RCc4&quot; +
&quot;&amp;UF0=1&quot; + 
&quot;&amp;MFTS0=Ready_for_LetterStream_Queue__c&quot; + 
&quot;&amp;MFTSValue0=false&quot; +  
&quot;&amp;APDF=1&quot;+ 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Letter Send</label>
    <type>Text</type>
</CustomField>