force-app/main/default/objects/Opportunity/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <label>Consultant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>