force-app/main/default/objects/Opportunity/fields/Contract_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Close_Date__c</fullName>
    <inlineHelpText>Set by Docusign when contract is closed</inlineHelpText>
    <label>Contract Close Date</label>
    <type>Date</type>
</CustomField>