force-app/main/default/objects/Opportunity/fields/Contract_Paper_Copy__c.field-meta.xml
<CustomField>
    <fullName>Contract_Paper_Copy__c</fullName>
    <defaultValue>&quot;info@bluewave-capital.com&quot;</defaultValue>
    <label>Contract - Paper Copy</label>
    <type>Email</type>
</CustomField>