force-app/main/default/objects/Opportunity/fields/Countersigned_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Countersigned_Contract_Id__c</fullName>
    <formula>BLANKVALUE(
 Contract.Parent_Contract__c,
 Contract.Id 
)</formula>
    <inlineHelpText>Returns the ID of the contract that covers the opportunity that is countersigned by Perch.</inlineHelpText>
    <label>Countersigned Contract Id</label>
    <type>Text</type>
</CustomField>