force-app/main/default/objects/Opportunity/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <formula>Personal_Credit_Report2__r.LASERCA__Credit_Score_TransUnion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Score</label>
    <type>Text</type>
</CustomField>