force-app/main/default/objects/Opportunity/fields/CS_Application_Approval_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>CS_Application_Approval_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is checked when this workflow fires &gt; 01Qj0000000EhVe</description>
    <inlineHelpText>Do not uncheck this box unless you want the Application Approval email to be sent</inlineHelpText>
    <label>CS - Application Approval Email Sent</label>
    <type>Checkbox</type>
</CustomField>