force-app/main/default/objects/Opportunity/fields/CS_Capacity_Allocated__c.field-meta.xml
<CustomField>
    <fullName>CS_Capacity_Allocated__c</fullName>
    <inlineHelpText>Sum of Future Customer Subscription (KW DC) on Utility Account Subscriptions when Opportunity is set to Complete. Used in Docusign.</inlineHelpText>
    <label>Customer Subscription kW DC at Complete</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>