force-app/main/default/objects/Opportunity/fields/CS_Reserved_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CS_Reserved_Capacity__c</fullName>
    <label>Project Reserved Capacity (kW)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>