force-app/main/default/objects/Opportunity/fields/Customer_Address_Verified__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Address Verified</label>
    <type>Checkbox</type>
</CustomField>