force-app/main/default/objects/Opportunity/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <label>Customer Group</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Residential</fullName>
                
                
                    <label>Residential</label>
                
                </value>
            
                <value>
                
                    <fullName>Non-Residential</fullName>
                
                    <default>true</default>
                
                    <label>Non-Residential</label>
                
                </value>
            
                <value>
                
                    <fullName>Anchor</fullName>
                
                
                    <label>Anchor</label>
                
                </value>
            
                <value>
                
                    <fullName>Business</fullName>
                
                
                    <label>Business</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>