force-app/main/default/objects/Opportunity/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <label>Customer Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>