force-app/main/default/objects/Opportunity/fields/Customer_Queue_Duration__c.field-meta.xml
<CustomField>
    <fullName>Customer_Queue_Duration__c</fullName>
    <formula>Contract_Close_Date__c -  Application_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Queue Duration</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>