force-app/main/default/objects/Opportunity/fields/Customer_Referral__c.field-meta.xml
<CustomField>
    <fullName>Customer_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Referral</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Customer Referral)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>