force-app/main/default/objects/Opportunity/fields/Customer_Signature_Verified__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signature_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Signature Verified</label>
    <type>Checkbox</type>
</CustomField>