force-app/main/default/objects/Opportunity/fields/Customer_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sub_Group__c</fullName>
    <inlineHelpText>Further categorizes Customer Group</inlineHelpText>
    <label>Customer Sub-Group</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Public Offtake</fullName>
                
                
                    <label>Public Offtake</label>
                
                </value>
            
                <value>
                
                    <fullName>LMI</fullName>
                
                
                    <label>LMI</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>